--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,61 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  --main-color: #0aad0a;
+  --light-color: #f0f3f2;
+  --shadow: rgba(145,158,171,.2) 0px 2px 4px -1px, rgba(145,158,171,.14) 0px 4px 5px 0px;
+  --rating-color: #ffc908;
+}
+
+.rating-color{
+  color: var(--rating-color);
+}
+.cursor-pointer{
+  cursor: pointer;
+}
+a, a:hover{
+  color: black;
+  text-decoration: none;
+}
+.product:hover{
+  box-shadow: var(--shadow);
+  border: solid 1px var(--main-color);
+}
+.product .btn{
+  transition: transform 1s, opacity 1s;
+  transform: translateY(100%);
+  opacity: 0;
+}
+.product:hover .btn{
+  opacity: 1;
+  transform: translateY(0%);
+}
+.font-sm{
+  font-size: 14px;
+}
+.text-main{
+  color: var(--main-color);
+}
+.bg-main{
+  background-color: var(--main-color) !important;
+}
+.bg-main-light{
+  background-color: var(--light-color) !important;
+}
+img .logo{
+  width: 100px;
+}
+.card{
+  padding-right: calc(var(--bs-gutter-x)* .5);
+  padding-left: calc(var(--bs-gutter-x)* .5);
+  transition: all 0.5s;
+}
+.card:hover{
+  box-shadow: 1px 1px 10px #0aad0a;
+}
+.nav-item{
+  cursor: pointer;
+}
+
